SERVER-40691 $nin:[[],...] queries are not indexed #3420